# employee-check

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_employee_check.py  run_employee_check_employee.py  run_employee_check_employer.py
.github/workflows/: release.yml
employee_check/: config.py  employee_app.py  employer_app.py  idle.py  main.py  models.py  monitor.py  net.py  paths.py  reporting.py  startup.py  storage.py  tray.py  updates.py
installer/linux/: uninstall_employee_check.sh
installer/macos/: uninstall_employee_check.sh
installer/windows/: EmployeeCheck.iss  UninstallEmployeeCheck.ps1
scripts/: build.ps1  build.sh  build_linux.sh  build_macos.sh
