[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "employee-check"
version = "0.1.1"
description = "Cross-platform LAN employee monitoring dashboard and visible employee agent."
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.2",
  "Pillow>=10.0.0",
  "psutil>=5.9.8",
  "pystray>=0.19.5",
]

[project.scripts]
employee-check = "employee_check.main:main"

[tool.setuptools.packages.find]
include = ["employee_check*"]
